crates/aranya-policy-compiler/tests/data/optional/coalesce_none_none.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: option[never]
  |
1 | function f() int {
  |              --- expected because of this
2 |     return None or None
  |            ^^^^^^^^^^^^ expected `int` but found `option[never]`
